# cjlb

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  deny.toml  pyproject.toml  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/cjlb-bootstrap/: Cargo.toml
crates/cjlb-bootstrap/src/: main.rs
crates/cjlb-cli/: Cargo.toml
crates/cjlb-cli/src/: main.rs
crates/cjlb-crypto/: Cargo.toml
crates/cjlb-crypto/src/: chunk_hmac.rs  error.rs  key.rs  lib.rs  page_crypto.rs
crates/cjlb-deploy/: Cargo.toml
crates/cjlb-deploy/src/: config.rs  deploy.rs  main.rs
crates/cjlb-format/: Cargo.toml
crates/cjlb-format/src/: chunk.rs  config.rs  lib.rs  manifest.rs  nonce.rs  page.rs  route_table.rs
crates/cjlb-pack/: Cargo.toml
crates/cjlb-pack/src/: lib.rs  main.rs  pack.rs  route_table_builder.rs
crates/cjlb-runtime/: Cargo.toml
crates/cjlb-runtime/src/: config_blob.rs  exec.rs  main.rs  manifest.rs
crates/cjlb-shim/: Cargo.toml
crates/cjlb-shim/src/: cache.rs  fd_table.rs  hooks.rs  init.rs  ipc_server.rs  lib.rs  overlay.rs  page_read.rs  pressure.rs  real_fns.rs  route_table_view.rs  state.rs  stream_hub.rs
crates/cjlb-view/: Cargo.toml
crates/cjlb-view/src/: bundle.rs  commands.rs  lib.rs  main.rs  socket_client.rs
e2e/: Dockerfile  benchmark.py  benchmark_data_gen.py  cache_diag.py  overhead_diag.py  run_tests.sh  test_shim.py
e2e/helpers/: Cargo.toml
e2e/helpers/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_validate.rs  decrypt_page.rs  encrypt_decrypt_roundtrip.rs  nonce_generation.rs  route_table_parse.rs
tests/: Cargo.toml  integration_pack_view.rs
