[workspace]
resolver = "2"
members = [
    "crates/cjlb-format",
    "crates/cjlb-crypto",
    "crates/cjlb-pack",
    "crates/cjlb-deploy",
    "crates/cjlb-view",
    "crates/cjlb-cli",
    "crates/cjlb-bootstrap",
    "crates/cjlb-runtime",
    "crates/cjlb-shim",
    "tests",
    "e2e/helpers",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
mem_forget = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "deny"

[workspace.package]
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
publish = false

[workspace.dependencies]
# Internal crates
cjlb-format = { path = "crates/cjlb-format" }
cjlb-crypto = { path = "crates/cjlb-crypto" }
cjlb-pack = { path = "crates/cjlb-pack" }
cjlb-view = { path = "crates/cjlb-view" }

# Crypto
ring = "0.17"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# Serialization / zero-copy
bytemuck = { version = "1", features = ["derive"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System
libc = "0.2"

# File traversal
walkdir = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Config

# Error handling
anyhow = "1"
thiserror = "2"

# Testing
tempfile = "3"
