[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cjlb"
version = "0.2.1"
description = "Encrypted-at-rest, decrypted-in-memory execution for hostile environments"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[tool.maturin]
manifest-path = "crates/cjlb-cli/Cargo.toml"
bindings = "bin"
strip = true
