[package]
name = "cjlb-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "integration_pack_view"
path = "integration_pack_view.rs"

[dependencies]
cjlb-pack = { path = "../crates/cjlb-pack" }
cjlb-view = { path = "../crates/cjlb-view" }
cjlb-crypto = { workspace = true }
cjlb-format = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
