[package]
name = "cjlb-bootstrap"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cjlb-bootstrap"
path = "src/main.rs"

[dependencies]
cjlb-crypto = { workspace = true }
ring = { workspace = true }
libc = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
