[package]
name = "cjlb-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cjlb"
path = "src/main.rs"

[dependencies]
cjlb-format = { workspace = true }
cjlb-crypto = { workspace = true }
cjlb-pack = { workspace = true }
cjlb-view = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
