[package]
name = "cjlb-crypto"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cjlb-format = { workspace = true }
ring = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
