[package]
name = "cjlb-deploy"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cjlb-deploy"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
