[package]
name = "cjlb-view"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "cjlb_view"
path = "src/lib.rs"

[[bin]]
name = "cjlb-view"
path = "src/main.rs"

[dependencies]
cjlb-format = { workspace = true }
cjlb-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
