[package]
publish = false
name = "e2e-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2e-helper"
path = "src/main.rs"

[dependencies]
cjlb-crypto = { path = "../../crates/cjlb-crypto" }
cjlb-pack = { path = "../../crates/cjlb-pack" }
anyhow = "1"
rand = "0.8"
ring = "0.17"
serde_json = "1"
env_logger = "0.11"
